--- a/config.toml
+++ b/config.toml
@@ -62,7 +62,7 @@ enableGitInfo = false
   organizations = [ { name = "Purdue University", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
+  avatar = "profile.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "test@example.org"
   address = "Building 1 Room 1, Stanford University, California, 90210, USA"
   office_hours = "Monday 10:00 to 13:00 or email for appointment"
@@ -258,29 +258,34 @@ enableGitInfo = false
   weight = 1
 
 [[menu.main]]
-  name = "Publications"
-  url = "#publications_selected"
+  name = "Research"
+  url = "#research"
   weight = 2
 
 [[menu.main]]
-  name = "Posts"
-  url = "#posts"
+  name = "CV"
+  url = "https://drive.google.com/file/d/1zGiXAS-OiFyqixdVcCkkrr0ndPavQ_nL/view?usp=sharing"
   weight = 3
+
+[[menu.main]]
+  name = "Resume"
+  url = "https://drive.google.com/file/d/1zGiXAS-OiFyqixdVcCkkrr0ndPavQ_nL/view?usp=sharing"
+  weight = 4
 
 [[menu.main]]
   name = "Projects"
   url = "#projects"
-  weight = 4
-
-[[menu.main]]
-  name = "Teaching"
-  url = "#teaching"
   weight = 5
 
 [[menu.main]]
-  name = "Contact"
-  url = "#contact"
+  name = "Resources"
+  url = "#resources"
   weight = 6
+  
+[[menu.main]]
+  name = "Hobbies"
+  url = "#hobbies"
+  weight = 7
 
 # Taxonomies.
 [taxonomies]
