--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ enableGitInfo = false
 [params]
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`.
-  color_theme = "default"
+  color_theme = "ocean"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
@@ -282,10 +282,6 @@ enableGitInfo = false
   url = "/resources"
   weight = 6
   
-[[menu.main]]
-  name = "Hobbies"
-  url = "/hobbies"
-  weight = 7
 
 # Taxonomies.
 [taxonomies]
