--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ title = "Garrett M. O'Day"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
-copyright = "&copy; 2018"
+copyright = "&copy; 2019"
 
 theme = "hugo-academic"
 enableEmoji = true
@@ -47,11 +47,11 @@ enableGitInfo = false
 [params]
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`.
-  color_theme = "ocean"
+  color_theme = "custom"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
-  font = "default"
+  font = "classic"
 
   # Your details.
   name = "Garrett M O'Day"
@@ -59,7 +59,7 @@ enableGitInfo = false
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Purdue University", url = "" } ]
+  organizations = [ { name = "Cognition and Learning Lab", url = "http://learninglab.psych.purdue.edu/index.html" }]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "profile.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
@@ -224,26 +224,15 @@ enableGitInfo = false
   #   Full list: https://jpswalsh.github.io/academicons/
 
   [[params.social]]
-    icon = "envelope"
-    icon_pack = "fa"
-    link = "mailto:test@example.org"
-
-  [[params.social]]
     icon = "twitter"
     icon_pack = "fa"
     link = "//twitter.com/GeorgeCushen"
 
   [[params.social]]
-    icon = "google-scholar"
-    icon_pack = "ai"
-    link = "https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ"
-
-  [[params.social]]
-    icon = "github"
+    icon = "linkedin"
     icon_pack = "fa"
-    link = "//github.com/gcushen"
-
-
+    link = "https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ"
+    
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
 #     desired widget in your `content/home/` folder.
@@ -261,20 +250,20 @@ enableGitInfo = false
   name = "Research"
   url = "/research"
   weight = 2
+  
+[[menu.main]]
+  name = "Projects"
+  url = "/projects"
+  weight = 3  
 
 [[menu.main]]
   name = "CV"
   url = "https://drive.google.com/file/d/1oZgY_bxmXP2-KaPnL61Z1FMNUAPWvmkN/view?usp=sharing"
-  weight = 3
+  weight = 4
 
 [[menu.main]]
   name = "Resume"
   url = "https://drive.google.com/file/d/1HAkb1XARDiTgtujeNKfv9v0GNGLmevLW/view?usp=sharing"
-  weight = 4
-
-[[menu.main]]
-  name = "Projects"
-  url = "/projects"
   weight = 5
 
 [[menu.main]]
