--- a/themes/hugo-academic/data/themes/dark.toml
+++ b/themes/hugo-academic/data/themes/dark.toml
@@ -16,3 +16,5 @@ menu_text_active = "rgba(255,255,255,1)"
 menu_title = "#fff"
 
 # Home sections
+home_section_odd = "rgb(255, 255, 255)"
+home_section_even = "rgb(247, 247, 247)"
