--- a/themes/hugo-academic/data/themes/dark.toml
+++ b/themes/hugo-academic/data/themes/dark.toml
@@ -5,9 +5,9 @@ name = "Dark"
 light = false
 
 # Primary
-primary = "#20B2AA"
-primary_light = "#20B2AA"
-primary_dark = "#20B2AA"
+primary = "hsl(339, 90%, 68%)"
+primary_light = "hsl(339, 90%, 78%)"
+primary_dark = "hsl(339, 90%, 58%)"
 
 # Menu
 menu_primary = "rgb(20, 22, 34)"
@@ -16,5 +16,5 @@ menu_text_active = "rgba(255,255,255,1)"
 menu_title = "#fff"
 
 # Home sections
-home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(247, 247, 247)"
+home_section_odd = "hsla(231, 15%, 18%, 1)"
+home_section_even = "hsla(231, 15%, 17%, 1)"
