--- a/themes/hugo-academic/data/themes/custom.toml
+++ b/themes/hugo-academic/data/themes/custom.toml
@@ -1,20 +1,22 @@
 # Theme metadata
-name = "Custom"
+name = "custom"
 
 # Is theme light or dark?
-light = false
+light = true
+
+
 
 # Primary
-primary = "#20B2AA"
-primary_light = "#252734"
-primary_dark = "#252734"
+primary = "#6897bb"
+primary_light = "#70549F"
+primary_dark = "#70549F"
 
 # Menu
-menu_primary = "#141522"
-menu_text = "#9F9FA4"
-menu_text_active = "#20B2AA"
-menu_title = "#FFFFFF"
+menu_primary = "#242229"
+menu_text = "#86abc8"
+menu_text_active = "#ffffff"
+menu_title = "#ffffff"
 
 # Home sections
-home_section_odd = "#252734"
-home_section_even = "#252734"
+home_section_odd = "rgb(255, 255, 255)"
+home_section_even = "rgb(247, 247, 247)"
