update Resume and CV

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -20,12 +20,12 @@
 
 [[main]]
   name = "CV"
-  url = "https://drive.google.com/file/d/1A-pXN1ZF3U1BKlUZ82UeDgRefkZVxc6S/view"
+  url = "https://drive.google.com/file/d/1pCnjv3GZI28Aq3ZPFARtkzp4POGgqgEo/view?usp=sharing"
   weight = 40
 
 [[main]]
   name = "Resume"
-  url = "https://drive.google.com/file/d/1A87HKt5u9HhLwgxg0ARD4oL1d0EVaPKw/view"
+  url = "https://drive.google.com/file/d/1m0Rz5cNZE-uGL4isq-Y9FNxhOJrpMg9C/view?usp=sharing"
   weight = 50
 
 
