updated resume and csv

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -20,12 +20,12 @@
 
 [[main]]
   name = "CV"
-  url = "https://drive.google.com/file/d/1pCnjv3GZI28Aq3ZPFARtkzp4POGgqgEo/view?usp=sharing"
+  url = "https://drive.google.com/file/d/1Q2ms_EzC-WKzDiGENTyfpcc94ayqwMPy/view?usp=sharing"
   weight = 40
 
 [[main]]
   name = "Resume"
-  url = "https://drive.google.com/file/d/1m0Rz5cNZE-uGL4isq-Y9FNxhOJrpMg9C/view?usp=sharing"
+  url = "https://drive.google.com/open?id=1pxLhZbxSsLHly_Qim5WWL5d2y2WlCqjF"
   weight = 50
 
 
